[gd_scene load_steps=16 format=3 uid="uid://8pv5dj2wmaf0"]

[ext_resource type="Script" uid="uid://cok0pia0ihhvo" path="res://player/player_controller.gd" id="1_iki0w"]
[ext_resource type="Script" uid="uid://lckqksy0e078" path="res://player/fps.gd" id="2_nmcgq"]

[sub_resource type="GDScript" id="GDScript_nmcgq"]
script/source = "extends Node3D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iki0w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_28lys"]
lightmap_size_hint = Vector2i(17, 14)
add_uv2 = true
radial_segments = 20

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4lhob"]
height = 1.4

[sub_resource type="SphereShape3D" id="SphereShape3D_iki0w"]

[sub_resource type="Animation" id="Animation_45fae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jjo6d"]
resource_name = "crouch"

[sub_resource type="Animation" id="Animation_nmcgq"]
resource_name = "jump"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1288, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.134218, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0698132, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kljte"]
resource_name = "landing"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.134218, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.134218, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0698132, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_47d28"]
resource_name = "roll"
length = 0.6
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.305345, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/eye/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.305345, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.14159, 0, 0), Vector3(-6.28319, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wylx6"]
resource_name = "side_way_movement_left"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.278502),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.10472), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fdb53"]
resource_name = "side_way_movement_right"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/eye/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.278502),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.10472), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1axc"]
_data = {
&"RESET": SubResource("Animation_45fae"),
&"crouch": SubResource("Animation_jjo6d"),
&"jump": SubResource("Animation_nmcgq"),
&"landing": SubResource("Animation_kljte"),
&"roll": SubResource("Animation_47d28"),
&"side_way_movement_left": SubResource("Animation_wylx6"),
&"side_way_movement_right": SubResource("Animation_fdb53")
}

[node name="Player_controller" type="Node3D"]
script = SubResource("GDScript_nmcgq")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_iki0w")
sensitivity = 0.1
lerp_speed = 10.0

[node name="un_crouched_collision_shape" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("CapsuleShape3D_iki0w")
debug_color = Color(2.69532e-06, 0.791304, 0.92051, 0.42)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/un_crouched_collision_shape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0079298, -2.38419e-07, 0.00433207)
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_28lys")
skeleton = NodePath("../../..")

[node name="crouched_collision_shape" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
shape = SubResource("CapsuleShape3D_4lhob")
debug_color = Color(2.69532e-06, 0.791304, 0.92051, 0.42)

[node name="head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.651091, 0)

[node name="eye" type="Node3D" parent="CharacterBody3D/head"]

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/head/eye"]

[node name="obstacle_check" type="Node3D" parent="CharacterBody3D/head"]

[node name="obstacle_checker" type="ShapeCast3D" parent="CharacterBody3D/head/obstacle_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.873617, 0)
shape = SubResource("SphereShape3D_iki0w")
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="UI" type="Node" parent="CharacterBody3D"]

[node name="player_movement_Debugger" type="Control" parent="CharacterBody3D/UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="player_states_and_speed" type="VBoxContainer" parent="CharacterBody3D/UI/player_movement_Debugger"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="state" type="Label" parent="CharacterBody3D/UI/player_movement_Debugger/player_states_and_speed"]
layout_mode = 2
text = "Player state"

[node name="speed_label" type="Label" parent="CharacterBody3D/UI/player_movement_Debugger/player_states_and_speed"]
layout_mode = 2
text = "SPEED:"

[node name="fps" type="Label" parent="CharacterBody3D/UI/player_movement_Debugger/player_states_and_speed"]
layout_mode = 2
text = "SPEED:"
script = ExtResource("2_nmcgq")

[node name="PLAYER_ANIMATION" type="AnimationPlayer" parent="CharacterBody3D"]
libraries = {
&"": SubResource("AnimationLibrary_k1axc")
}
